[project]
name = "hex-grid"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tino Michael", email = "tino.michael.87@gmail.com" }
]
dependencies = [
    "hypothesis>=6.124.2",
    "pytest>=8.3.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hex_grid"]
